Corrected cmake mistake

--- a/src/homework/01_data_types/CMakeLists.txt
+++ b/src/homework/01_data_types/CMakeLists.txt
@@ -1,10 +1,10 @@
 
 #include "data_types.h"
 
-//example
+#example
 int add_numbers(int num1, int num2)
 {
 return num1 + num2;
 }
 
-//write function code here
+#write function code here
