--- a/src/homework/01_data_types/CMakeLists.txt
+++ b/src/homework/01_data_types/CMakeLists.txt
@@ -1,10 +1,8 @@
+project(hw_01_library)
 
-#include "data_types.h"
+add_library(hw_01_library "data_types.cpp" "data_types.h")
+add_executable(hw_01_exe "main.cpp" "data_types.cpp")
 
-#example
-int add_numbers(int num1, int num2)
-{
-return num1 + num2;
-}
 
-#write function code here
+
+
