--- a/src/homework/06_tic_tac_toe/CMakeLists.txt
+++ b/src/homework/06_tic_tac_toe/CMakeLists.txt
@@ -1,6 +1,10 @@
 add_library(hw_tic_tac_toe_library 
     "tic_tac_toe.cpp" 
-    "tic_tac_toe.h" 
+    "tic_tac_toe.h"
+    "tic_tac_toe_3.cpp"
+    "tic_tac_toe_3.h"
+    "tic_tac_toe_4.cpp"
+    "tic_tac_toe_4.h"
     "tic_tac_toe_manager.cpp"
     "tic_tac_toe_manager.h"
 )
